<resources>
    <string name="app_name">NUMAD21Fa-JinhongLi</string>
    <string name="jinhongcs5520">Jinhongcs5520</string>
    <string name="jinhong_li">Jinhong Li</string>
    <string name="about">About</string>
    <string name="textview1">TextView1</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="pressed">Pressed: -</string>
    <string name="clicky_clicky">Clicky Clicky</string>
</resources>